--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-hook-form": "^5.5.3",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
